Fixed: Blog featured images overflowing in IE11

--- a/assets/scss/main/_content.scss
+++ b/assets/scss/main/_content.scss
@@ -136,6 +136,7 @@ body {
 
 .wpbf-post-image-link {
 	display: inline-block;
+	max-width: 100%;
 }
 
 // Article meta
